RESOLVED FIXED164610
Get touch bar code building for open source builds
https://bugs.webkit.org/show_bug.cgi?id=164610
Summary Get touch bar code building for open source builds
Beth Dakin
Reported 2016-11-10 13:03:16 PST
Get touch bar code building for open source builds
Attachments
Patch (3.77 KB, patch)
2016-11-10 13:07 PST, Beth Dakin
wenson_hsieh: review+
Patch (3.86 KB, patch)
2016-11-10 13:35 PST, Beth Dakin
wenson_hsieh: review+
Beth Dakin
Comment 1 2016-11-10 13:07:49 PST
WebKit Commit Bot
Comment 2 2016-11-10 13:09:42 PST
Attachment 294400 [details] did not pass style-queue: ERROR: Source/WTF/wtf/Platform.h:1217: CPP comments are not allowed in Platform.h, please use C comments /* ... */ [build/cpp_comment] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2016-11-10 13:18:10 PST
Comment on attachment 294400 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294400&action=review > Source/WTF/wtf/Platform.h:1214 > +#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MAX_ALLOWED >= 101201 I don’t think this is quite right. When building with the 10.12.1 SDK but targeting earlier-than-10.12 deployment, the code for these capabilities should not be compiled. So you should also check that __MAC_OS_X_VERSION_MIN_REQUIRED is at least 101200.
Beth Dakin
Comment 4 2016-11-10 13:35:13 PST
Created attachment 294406 [details] Patch Thanks Wenson! Here is a new patch that addresses Dan's comment.
Beth Dakin
Comment 5 2016-11-11 10:57:40 PST
Note You need to log in before you can comment on or make changes to this bug.