Get touch bar code building for open source builds https://bugs.webkit.org/show_bug.cgi?id=164610

Reviewed by Wenson Hsieh.

Source/WebCore:

* config.h:

Source/WebKit/mac:

* WebKitPrefix.h:

Source/WebKit2:

* config.h:

Source/WTF:

* wtf/Platform.h:



Canonical link: https://commits.webkit.org/182318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208595 268f45cc-cd09-0410-ab3c-d52691b4dbfc