Source/WebCore/config.h
@@ -132,7 +132,3 @@ typedef float CGFloat;
 #endif
 
 #endif
-
-#if USE(APPLE_INTERNAL_SDK)
-#include <WebKitAdditions/WebKitAdditionsDefines.h>
-#endif
