Source/WebKit2/config.h
@@ -133,7 +133,3 @@
 #define HAVE_LINK_PREVIEW 0
 #endif
 #endif
-
-#if USE(APPLE_INTERNAL_SDK)
-#include <WebKitAdditions/WebKitAdditionsDefines.h>
-#endif
